feat: add new table feedback
